# Trabalho2-EngenhariaDados

./: .env.example  .gitignore  404.html  README.md  docker-compose.yml  git_setup_t3.ps1  index.html  mkdocs.yml  pyproject.toml  search.html  update_notebooks.py
arquitetura/: index.html
delta/: index.html
docs/: arquitetura.md  delta.md  implementacao.md  index.md  minio.md  req1_extracao.md  req2_bronze.md  req3_dml.md  spark.md
implementacao/: index.html
minio/: index.html
req1_extracao/: index.html
req2_bronze/: index.html
req3_dml/: index.html
search/: search_index.json
spark/: index.html
src/: 00_setup_sqlserver.ipynb  01_sqlserver_to_landing.ipynb  02_landing_to_bronze.ipynb  03_dml_delta.ipynb
